@@ -10,6 +10,9 @@ offlineimap (3.99.15) unstable; urgency=low
     error message would not have been visible.  Closes: #185709.
   * Fixed a silly error relating to handling of the remotepassfile.
     Closes: #189935.
+  * Made OfflineIMAP IPv6-aware.  Used the short patch from
+    Adriaan Peeters <apeeters@lashout.net> in Debian bug report 186636.
+    Closes: #186636.
 
  -- John Goerzen <jgoerzen@complete.org>  Mon, 28 Apr 2003 14:00:32 -0500
 
